[project]
name = "datastructures-and-algorithms"
version = "0.1.0"
description = """
A module containing different datastructures and algorithms learned at the
university or read in books.
"""
authors = [
    {name = "Gérard Lichtert",email = "62557229+thebaconfate@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "datastructures", from = "src"},
            {include = "algorithms", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
